--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.0",
     "gulp-util": "^3.0.7",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "webpack-notifier": "^1.2.1"
   }
 }
