apply webpack-dev-server

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^3.9.0",
     "gulp-util": "^3.0.7",
     "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
     "webpack-notifier": "^1.2.1"
   }
 }
